Add get friends and add friend actions, and a dummy login
